Correct spacing on box

--- a/ceramics.css
+++ b/ceramics.css
@@ -170,23 +170,33 @@ th, tr, td {
 .box {
     z-index: 0;
     position: absolute;
-    margin: 0;
+    margin: 3vw 5vh;
     border: 2px solid black;
     background-color: #FFFFFF;
     left: 28%;
     bottom: 30%;
+    padding: 4%;
 }
 
 
 .boxtitle {
  padding: 0;
  text-align: center;
+ font-size: 2em;
+ margin: 0;
 }
 
 .bxsubttle {
     padding: 0;
     text-align: center;
+    font-size: 1em;
 }
 
 p.input {
-    text-align: left;
+    border-bottom: 2px solid tan;
+}
+
+.submit {
+    text-align: center;
+    border: 1px solid black;
+}
